--- a/lib/requirements.txt
+++ b/lib/requirements.txt
@@ -3,3 +3,7 @@ uvicorn==0.23.2
 SQLAlchemy==2.0.22
 SQLAlchemy-Utils==0.41.1
 psycopg2==2.9.9
+pydantic==1.10.12
+pydantic_core==2.10.1
+typing==3.7.4.3
+typing_extensions==4.8.0
